# Produce101-Voting-System

./: CMakeLists.txt  adrun.sh  virun.sh
inc/: FifoManager.h  Star.h  iVote.h
lib/: CMakeLists.txt  FifoManager.cpp  Star.cpp  iVote.cpp
src/: Admin.cpp  CMakeLists.txt  Viewer.cpp
